# potato_genome_db

./: README.md  database.py  main.py  pyproject.toml
data/: potato.db
models/: Genome_annotation.py  Genome_assembly.py  Organism.py
schemas/: Genome_annotation.py  Genome_assembly.py  Organism.py
templates/: Genome_annotation.html  Genome_assembly.html  Organism.html  base.html  joined.html
